getpost_frame_parser (wip)

--- a/ansible/production.yml
+++ b/ansible/production.yml
@@ -31,3 +31,5 @@
       name            : "wsn"
       user            : "wsn"
       password        : "change-this-one"
+
+    nginx_template    : "{{ playbook_dir }}/templates/nginx.conf"
