--- a/ansible/production.yml
+++ b/ansible/production.yml
@@ -34,3 +34,4 @@
       password        : "change-this-one"
 
     nginx_template    : "{{ playbook_dir }}/templates/nginx.conf"
+    monit_template    : "{{ playbook_dir }}/templates/monit.conf"
