Try with celery multi

--- a/ansible/templates/monit.conf
+++ b/ansible/templates/monit.conf
@@ -14,6 +14,7 @@ check process {{ django_name }} with pidfile {{ file_pid }}
 
 
 check process {{ django_name }}_celery with pidfile {{ dir_run }}/celery.pid
-   start program = "{{ celery }} -A project worker -Q celery_wsn -l debug -D -f {{ dir_log }}/celery.log --pidfile {{ dir_run }}/celery.pid --workdir {{ django_root }}"
+   start program = "{{ celery }} multi start w1 -A project -Q celery_wsn -l debug -f {{ dir_log }}/celery.log --pidfile {{ dir_run }}/celery.pid --workdir {{ django_root }}"
                    as uid {{ user }} and gid {{ group }}
-   stop = "/bin/sh -c 'kill -INT `cat {{ dir_run }}/celery.pid`'"
+   stop  program = "{{ celery }} multi stopwait w1 -f {{ dir_log }}/celery.log --pidfile {{ dir_run }}/celery.pid"
+                   as uid {{ user }} and gid {{ group }}
