--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = project.settings_ansible
+DJANGO_SETTINGS_MODULE = project.settings_test
 python_files = tests.py test_*.py
 addopts = --reuse-db
