init_clickhouse first draft

--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -17,5 +17,8 @@ djangorestframework==3.7.7
 celery==4.3.0
 celery_once==3.0.0
 
+# ClickHouse
+clickhouse-driver[lz4]
+
 # Tests
 pytest-django==3.4.8
