--- a/ansible/vars.yml
+++ b/ansible/vars.yml
@@ -3,7 +3,7 @@
 # the environment (development, staging, production, ...)
 #
 
-python_version : "3.5"
+#python_version : "3.7"
 
 # This is automacally found, but can be explicetely set
 django_repo    : ""
