--- a/ansible/dev_conda.yml
+++ b/ansible/dev_conda.yml
@@ -14,7 +14,8 @@
     django_with_monit : false
     django_with_sudo  : false
 
-    django_prefix     : ""
+    prefix            : ""
+    virtualenv        : false
 
 #   django_domain     : ""
 #   django_root       : ""
@@ -27,6 +28,3 @@
       password        : "wsn"
 
     django_port       : 8000 # Used by uwsgi
-
-    python_env        : "conda"
-    conda_channel     : "conda-forge"
