--- a/ansible/development.yml
+++ b/ansible/development.yml
@@ -14,11 +14,15 @@
     django_with_monit : false
     django_with_sudo  : false
 
-#   django_domain     : ""
-#   django_root       : ""
-#   django_name       : ""
+#   django_database   :
+#     engine          : "postgres"
+#     name            : ""
+#     user            : ""
+#     password        : ""
 
-    django_database   :
-      engine          : "sqlite"
+#   django_cache      :
+#     backend         : "memcached"
+#     location        : "127.0.0.1:11211"
+#     location        : "unix:/run/memcached/memcached.sock"
 
     django_port       : 8000 # Used by uwsgi
