--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,9 +1,13 @@
-Django==3.2
+Django==3.2.3
 django-sendfile2==0.6.0
-ipython==7.22.0
+ipython==7.23.1
 Pillow==8.2.0
-pip==21.0.1
+pip==21.1.1
 
 {% if django_database.engine == 'postgres' %}
 psycopg2==2.8.5
+{% endif %}
+
+{% if django_cache.backend == 'memcached' %}
+pymemcache==3.4.3
 {% endif %}
