--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -12,9 +12,11 @@ psycopg2-binary==2.8.5
 pymemcache==3.4.4
 {% endif %}
 
-# Custom
+# Project
+clickhouse-driver[lz4]==0.1.5
 django-admin-rangefilter==0.8.1
 djangorestframework==3.12.4
+drf-spectacular==0.18.1
 pycryptodome==3.10.1
 tabulate==0.8.9
 tqdm==4.62.2
@@ -23,9 +25,6 @@ tqdm==4.62.2
 celery==4.3.1
 celery_once==3.0.1
 vine==1.3.0
-
-# ClickHouse
-clickhouse-driver[lz4]==0.1.5
 
 # Tests
 pytest-django==4.2.0
