--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -16,6 +16,7 @@ pymemcache==3.4.4
 clickhouse-driver[lz4]==0.1.5
 django-admin-rangefilter==0.8.1
 djangorestframework==3.12.4
+djangorestframework-api-key==2.0.0
 drf-spectacular==0.18.1
 pycryptodome==3.10.1
 tabulate==0.8.9
