--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.34",
+    "@urql/svelte": "^1.3.3",
+    "graphql": "^16.2.0",
     "sass": "^1.49.8",
     "svelte": "^3.46.1",
     "vite": "^2.7.10"
