--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,7 +1,6 @@
 Django==4.0.1
-git+https://github.com/moggers87/django-sendfile2@6145876dae2ffb838a249a0090fc20897b868981#django-sendfile2
+django-sendfile2==0.6.1
 django-vite==1.3.0
-ipython==8.0.0
 Pillow==9.0.0
 uWSGI==2.0.20
 
