--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -2,7 +2,7 @@ Django==4.0.3
 django-sendfile2==0.6.1
 django-vite==1.4.0
 Pillow==9.0.1
-strawberry-graphql-django==0.2.5
+strawberry-graphql-django==0.3rc1
 uWSGI==2.0.20
 
 {% if django_database.engine == 'postgres' %}
