--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -2,6 +2,7 @@ Django==4.0.3
 django-sendfile2==0.6.1
 django-vite==2.0.2
 gunicorn==20.1.0
+python-dotenv==0.20.0
 strawberry-graphql-django==0.3rc1
 uvicorn==0.17.6
 
