--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "build": "vite build && npm run minify && npm run rename",
+    "serve": "vite preview",
+    "minify": "esbuild var/build/main.js --minify --outdir=var/build --allow-overwrite",
+    "rename": "sh ansible/rename.sh"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.34",
