--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -3,7 +3,7 @@ django-sendfile2==0.6.1
 django-vite==2.0.2
 gunicorn==20.1.0
 python-dotenv==0.20.0
-strawberry-graphql-django==0.3rc1
+strawberry-graphql-django==0.3
 uvicorn==0.17.6
 
 {% if django_database.engine == 'postgres' %}
