--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -13,6 +13,7 @@ pymemcache==3.5.0
 {% endif %}
 
 # Project
+celery==4.4.7
 clickhouse-driver[lz4]==0.2.3
 django-admin-rangefilter==0.8.4
 django-filter==21.1
@@ -23,11 +24,9 @@ pycryptodome==3.14.1
 tabulate==0.8.9
 tqdm==4.64.0
 
-# Celery
-celery==4.3.1
+# Celery Once
 celery_once==3.0.1
 six==1.16.0
-vine==1.3.0
 
 # Tests
 pytest-django==4.5.2
