--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "rename": "sh ansible/rename.sh"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.34",
+    "@sveltejs/vite-plugin-svelte": "^1.0.1",
     "@urql/svelte": "^2.0.2",
     "graphql": "^16.2.0",
-    "sass": "^1.49.8",
-    "svelte": "^3.46.1",
-    "vite": "^2.7.10"
+    "sass": "^1.54.0",
+    "svelte": "^3.49.0",
+    "vite": "^3.0.4"
   }
 }
