--- a/ansible/dev_conda.yml
+++ b/ansible/dev_conda.yml
@@ -10,16 +10,12 @@
   - role              : "jdavid.django"
     django_debug      : true
     django_pull       : false
-    django_with_nginx : false
     django_with_monit : false
-    django_with_sudo  : false
 
-    prefix            : ""
-    virtualenv        : false
-
-#   django_domain     : ""
-#   django_root       : ""
-#   django_name       : ""
+#   django_cache      :
+#     backend         : "memcached"
+#     location        : "127.0.0.1:11211"
+#     location        : "unix:/run/memcached/memcached.sock"
 
     django_database   :
       engine          : "postgres"
@@ -27,4 +23,8 @@
       user            : "wsn"
       password        : "wsn"
 
-    django_port       : 8000 # Used by uwsgi
+    django_server     :
+      port            : 8000
+
+    prefix            : ""
+    virtualenv        : false
