--- a/ansible/templates/nginx.conf
+++ b/ansible/templates/nginx.conf
@@ -1,31 +1,37 @@
 #jinja2: trim_blocks: "true", lstrip_blocks: "true"
-{% if django_port %}{% set backend = 'proxy' %}{% else %}{% set backend = 'uwsgi' %}{% endif %}
+upstream {{ django_name }} {
+{% if django_server_combined.port %}
+  server localhost:{{ django_server_combined.port }} fail_timeout=0;
+{% else %}
+  server unix:{{ file_sock }} fail_timeout=0;
+{% endif %}
+}
+
 {% macro proxy() %}
-{% if django_port %}
-        proxy_pass http://localhost:{{ django_port }}/;
+        proxy_pass http://{{ django_name }};
         proxy_redirect default;
         proxy_set_header Host $host;
-{% else %}
-        include /etc/nginx/uwsgi_params;
-        uwsgi_pass unix:{{ file_sock }};
-{% endif %}{% endmacro %}
-{% macro main() %}
-    location {{ media_url }} {
+{% endmacro %}
+{% macro main(https) %}
+    location /{{ media_url }} {
         alias {{ dir_media }}/;
     }
-    location {{ static_url }} {
+    location /{{ static_url }} {
         alias {{ dir_static }}/;
     }
     location {{ sendfile_url }} {
         internal;
-        alias {{ dir_sendfile }};
+        alias {{ dir_sendfile }}/;
     }
     location / {
-{% if nginx_timeout %}
-        {{ backend }}_read_timeout {{ nginx_timeout }};
+{% if https %}
+        proxy_set_header X-Forwarded-Proto https;
 {% endif %}
-{% if nginx_max_body_size %}
-        client_max_body_size {{ nginx_max_body_size }};
+{% if django_web_combined.timeout %}
+        proxy_read_timeout {{ django_web_combined.timeout }};
+{% endif %}
+{% if django_web_combined.max_body_size %}
+        client_max_body_size {{ django_web_combined.max_body_size }};
 {% endif %}
 {{ proxy() }}
     }{% endmacro %}
@@ -34,24 +40,19 @@ server {
     server_name {{ django_domains|join(" ") }};
     charset utf-8;
 
-    error_log /var/log/nginx/{{ django_name }}_error.log;
-    access_log /var/log/nginx/{{ django_name }}_access.log;
-{% if django_https %}
+    error_log /var/log/nginx/{{ django_name }}_http_error.log;
+    access_log /var/log/nginx/{{ django_name }}_http_access.log;
+{% if django_web_combined.https %}
 
     location /.well-known/acme-challenge {
         root {{ dir_www }};
     }
 {% endif %}
 
-{% if django_http %}
-{{ main() }}
+{% if django_web_combined.http %}
+{{ main(https=False) }}
 {% else %}
     location /ping {
-{{ proxy() }}
-    }
-
-    # Specific
-    location /getpost_frame_parser.php {
 {{ proxy() }}
     }
 
@@ -60,23 +61,23 @@ server {
     }
 {% endif %}
 }
-{% if django_https and certificate %}
+{% if django_web_combined.https and certificate %}
 
 server {
     listen 443 ssl;
     server_name {{ django_domains|join(" ") }};
     charset utf-8;
 
-    error_log /var/log/nginx/{{ django_name }}_error.log;
-    access_log /var/log/nginx/{{ django_name }}_access.log;
+    error_log /var/log/nginx/{{ django_name }}_https_error.log;
+    access_log /var/log/nginx/{{ django_name }}_https_access.log;
 
     ssl_certificate {{ certificate }};
     ssl_certificate_key {{ certificate_key }};
 
-    {% if django_hsts %}
-    add_header Strict-Transport-Security "max-age={{ django_hsts }}" always;
+    {% if django_web_combined.hsts %}
+    add_header Strict-Transport-Security "max-age={{ django_web_combined.hsts }}" always;
     {% endif %}
 
-{{ main() }}
+{{ main(https=True) }}
 }
 {% endif %}
