--- a/ansible/templates/nginx.conf
+++ b/ansible/templates/nginx.conf
@@ -56,6 +56,11 @@ server {
 {{ proxy() }}
     }
 
+    # Specific
+    location /getpost_frame_parser.php {
+{{ proxy() }}
+    }
+
     location / {
         return 301 https://$host$request_uri;
     }
