Fix Celery after update, fix tests
Update requirements

--- a/ansible/development.yml
+++ b/ansible/development.yml
@@ -21,5 +21,9 @@
     django_server     :
       port            : 8000
 
+    celery:
+      queues          : celery_wsn
+      workers         : 1
+
     supervisor:
       daemon          : false
