--- a/ansible/templates/nginx.conf
+++ b/ansible/templates/nginx.conf
@@ -3,7 +3,7 @@ upstream {{ django_name }} {
 {% if django_server_combined.port %}
   server localhost:{{ django_server_combined.port }} fail_timeout=0;
 {% else %}
-  server unix:{{ file_sock }} fail_timeout=0;
+  server unix:{{ uvicorn_sock }} fail_timeout=0;
 {% endif %}
 }
 
@@ -27,11 +27,11 @@ upstream {{ django_name }} {
 {% if https %}
         proxy_set_header X-Forwarded-Proto https;
 {% endif %}
-{% if django_web_combined.timeout %}
-        proxy_read_timeout {{ django_web_combined.timeout }};
+{% if nginx_combined.timeout %}
+        proxy_read_timeout {{ nginx_combined.timeout }};
 {% endif %}
-{% if django_web_combined.max_body_size %}
-        client_max_body_size {{ django_web_combined.max_body_size }};
+{% if nginx_combined.max_body_size %}
+        client_max_body_size {{ nginx_combined.max_body_size }};
 {% endif %}
 {{ proxy() }}
     }{% endmacro %}
@@ -42,14 +42,14 @@ server {
 
     error_log /var/log/nginx/{{ django_name }}_http_error.log;
     access_log /var/log/nginx/{{ django_name }}_http_access.log;
-{% if django_web_combined.https %}
+{% if nginx_combined.https %}
 
     location /.well-known/acme-challenge {
         root {{ dir_www }};
     }
 {% endif %}
 
-{% if django_web_combined.http %}
+{% if nginx_combined.http %}
 {{ main(https=False) }}
 {% else %}
     location /ping {
@@ -66,7 +66,7 @@ server {
     }
 {% endif %}
 }
-{% if django_web_combined.https and certificate %}
+{% if nginx_combined.https and certificate %}
 
 server {
     listen 443 ssl;
@@ -79,8 +79,8 @@ server {
     ssl_certificate {{ certificate }};
     ssl_certificate_key {{ certificate_key }};
 
-    {% if django_web_combined.hsts %}
-    add_header Strict-Transport-Security "max-age={{ django_web_combined.hsts }}" always;
+    {% if nginx_combined.hsts %}
+    add_header Strict-Transport-Security "max-age={{ nginx_combined.hsts }}" always;
     {% endif %}
 
 {{ main(https=True) }}
