--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -16,6 +16,7 @@ pymemcache==4.0.0
 
 # Project
 celery==4.3.1
+celery-singleton==0.3.1
 clickhouse-driver[lz4]==0.2.4
 django-admin-rangefilter==0.9.0
 django-filter==22.1
@@ -25,10 +26,6 @@ drf-spectacular==0.24.2
 pycryptodome==3.15.0
 tabulate==0.8.10
 tqdm==4.64.1
-
-# Celery Once
-celery_once==3.0.1
-six==1.16.0
 
 # Tests
 pytest-django==4.5.2
