--- a/ansible/vars.yml
+++ b/ansible/vars.yml
@@ -3,6 +3,7 @@
 # the environment (development, staging, production, ...)
 #
 
+# Default to ansible_python, probably /usr/bin/python3
 #python_version : "3.9"
 
 # This is automacally found, but can be explicetely set
