--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -7,7 +7,7 @@ supervisor==4.2.5
 uvicorn==0.21.1
 
 {% if database.engine == 'postgres' %}
-psycopg-binary==3.1.8
+psycopg2-binary==2.9.6
 {% endif %}
 
 {% if cache.backend == 'memcached' %}
@@ -18,14 +18,14 @@ pymemcache==4.0.0
 celery[pytest]==5.2.7
 celery-singleton==0.3.1
 clickhouse-driver[lz4]==0.2.5
-django-admin-rangefilter==0.9.0
-django-filter==22.1
+django-admin-rangefilter==0.10.0
+django-filter==23.1
 djangorestframework==3.14.0
 djangorestframework-api-key==2.3.0
-drf-spectacular==0.25.1
+drf-spectacular==0.26.2
 pycryptodome==3.17
 tabulate==0.9.0
-tqdm==4.64.1
+tqdm==4.65.0
 
 # Tests
 pytest-django==4.5.2
