--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -1,9 +1,9 @@
-Django==4.2.6
+Django==4.2.7
 django-sendfile2==0.7.0
 django-vite==2.1.3
 python-dotenv==1.0.0
 supervisor==4.2.5
-uvicorn==0.23.2
+uvicorn==0.24.0.post1
 
 {% if database.engine == 'postgres' %}
 psycopg==3.1.12
