--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -3,10 +3,10 @@ django-sendfile2==0.7.0
 django-vite==2.1.3
 python-dotenv==1.0.0
 supervisor==4.2.5
-uvicorn==0.24.0.post1
+uvicorn==0.25.0
 
 {% if database.engine == 'postgres' %}
-psycopg==3.1.12
+psycopg==3.1.16
 {% endif %}
 
 {% if cache.backend == 'memcached' %}
