--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -24,6 +24,7 @@ djangorestframework-api-key==2.3.0
 drf-spectacular==0.26.5
 pycryptodome==3.19.0
 tabulate==0.9.0
+toml==0.10.2
 tqdm==4.66.1
 
 # Tests
