--- a/ansible/vars.yml
+++ b/ansible/vars.yml
@@ -4,7 +4,7 @@
 #
 
 # Default to ansible_python, probably /usr/bin/python3
-#python_version : "3.9"
+python_version : "3.9"
 
 # This is automacally found, but can be explicetely set
 django_repo    : "https://github.com/spectraphilic/wsn_server.git"
