--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = project.settings_test
-addopts = --reuse-db
+addopts = --reuse-db --tb=short
 pythonpath = apps
 testpaths = tests/
