Django & ClickHouse with django-clickhouse-backend

--- a/ansible/requirements.txt
+++ b/ansible/requirements.txt
@@ -18,6 +18,7 @@ celery[pytest]==5.3.4
 celery-singleton==0.3.1
 clickhouse-driver[lz4]==0.2.9
 django-admin-rangefilter==0.11.1
+django-clickhouse-backend==1.4
 django-filter==23.3
 djangorestframework==3.14.0
 djangorestframework-api-key==2.3.0
